--- a/static/css/search.css
+++ b/static/css/search.css
@@ -4,8 +4,20 @@
 
 .search_results .result {
     box-shadow: 4px 4px 7px #000000AA;
+    position: relative;
+    height: 150px;
+    padding: 3px;
+    margin-bottom: 20px;
 }
 
 .result img {
     border: 1px solid black;
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+}
+
+.result .description {
+    
 }
