--- a/templates/search/includes/accounts/nablauser.html
+++ b/templates/search/includes/accounts/nablauser.html
@@ -11,7 +11,7 @@
   {% else %}
   <img src="{% static 'img/default_avatar.png' %}"></img>
   {% endif %}
-  <p>{{ user.about }}</p>
+  <p class="description">{{ user.about }}</p>
 </div>
 
 {% endwith %}
