--- a/nablapps/podcast/templates/podcast/includes/sidebar_include.html
+++ b/nablapps/podcast/templates/podcast/includes/sidebar_include.html
@@ -9,6 +9,7 @@
     Vi elsker leserbrev, tilbakemeldinger og forslag, og ønsker at du, ja du,
     mailer oss.
 </p>
+<a href="https://www.facebook.com/skraattkast" class="btn btn-info">Facebook</a>
 <a href="mailto:skrattcast@nabla.ntnu.no" class="btn btn-primary btn-large">Brevsprekken</a>
 {% if podcast_clips %}
     <h2>Lydklipp</h2>
