--- a/nablapps/podcast/static/podcast/list.css
+++ b/nablapps/podcast/static/podcast/list.css
@@ -6,6 +6,9 @@
   font: 400 30px/1.5 Helvetica, Verdana, sans-serif;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .list-container ul {
