--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,18 @@
 
     <body>
 
+        <!-- Pop up window displaying important information about the 'fadderperiode' -->
+	<div id="new_student_info">
+	  <h2>Ny student?</h2>
+	  <div class="close_button" onclick="this.parentNode.classList.add('hidden');">Lukk meg</div>
+	  Nabla har et fadderopplegg, følg denne lenken for å være med: <a href="#">dummy lenke</a>.
+	  <br /><br />
+
+	  
+	  Grunnet nye personvernsregler i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla. Derfor må du som ny student oppgi kontaktopplysninger selv.
+	</div>
+      
+
         <!-- Navigation -->
         <header>
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
