--- a/static/css/default.css
+++ b/static/css/default.css
@@ -14,7 +14,7 @@ padding: 7px;
 
 nav.navbar {
     background: #222222;
-    border-bottom: solid 4px #b1b1b1;
+    box-shadow: 0px 0px 10px black;
 }
 .navbar .nav>li>a {
     text-shadow: 0 1px 0 #000;
