Adds css-rule to new-student popup for screen-sizes less than 350px

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -28,6 +28,13 @@
     
 }
 
+@media (max-width: 350px) {
+    #new_student_info {
+	width: 100%;
+	text-align: center;
+    }
+}
+
 /* MAIN */
 
 body {
