--- a/templates/base.html
+++ b/templates/base.html
@@ -62,11 +62,16 @@
 	<div id="new_student_info">
 	  <h2>Ny student?</h2>
 	  <div class="close_button" onclick="this.parentNode.classList.add('hidden');">Lukk meg</div>
-	  Nabla har et fadderopplegg, følg denne lenken for å være med: <a href="#">dummy lenke</a>.
-	  <br /><br />
-
-	  
-	  Grunnet nye personvernsregler i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla. Derfor må du som ny student oppgi kontaktopplysninger selv.
+	  <p>
+	    Nabla er linjeforeningen for alle studenter ved sivilingeniørprogrammet i fysikk og mattematikk. Vi har et heidundranes fadderopplegg som vi håper du vil ta del i! Det er derfor veldig viktig at du går inn på lenken under og registrer deg!
+	    <br />
+	    <span class="btn btn-primary center-block btn-lg">Påmelding til fadderopplegget - <u>viktig!</u></span>
+	    Registrerirngen tar 10 sekunder, og vi understreker igjen at det er vikitg at du gjør dette! Gjør dette nå, og så kan du lese resten av informasjonen senere.
+	    <br />
+	    <br />
+	    Mer informasjon om fadderopplegget finnes <a href="fadderbarn" class="btn btn-info btn-lg">her.</a>
+	  </p>
+	  <span class="GDPRinfo">Grunnet nye personvernsregler i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla. Derfor må du som ny student oppgi kontaktopplysninger selv.</span>
 	</div>
 	{% endif %}
       
