--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
 	  <p>
 	    Nabla er linjeforeningen for alle studenter ved sivilingeniørprogrammet i fysikk og mattematikk. Vi har et heidundranes fadderopplegg som vi håper du vil ta del i! Det er derfor veldig viktig at du går inn på lenken under og registrer deg!
 	    <br />
-	    <span class="btn btn-primary center-block btn-lg">Påmelding til fadderopplegget - <u>viktig!</u></span>
+	    <a href="https://goo.gl/forms/nrCuHhFy944SQrTL2" target="_blank" class="btn btn-primary center-block btn-lg">Påmelding til fadderperioden - <u>viktig!</u></a>
 	    Registrerirngen tar 10 sekunder, og vi understreker igjen at det er vikitg at du gjør dette! Gjør dette nå, og så kan du lese resten av informasjonen senere.
 	    <br />
 	    <br />
