--- a/templates/flatpages/emptysidebar.html
+++ b/templates/flatpages/emptysidebar.html
@@ -8,5 +8,5 @@
 
 {% block content %}
     <h2>{{ flatpage.title }}</h2>
-    {{ flatpage.content|markdown:"unsa}}
+    {{ flatpage.content|markdown:"unsafe"}}
 {% endblock %}
