Fixes a bug in the newStudent flatpage css

--- a/templates/flatpages/newStudent.html
+++ b/templates/flatpages/newStudent.html
@@ -5,13 +5,13 @@
 {% block more_head %}
 {{ block.super }}
 <style>
- .container img {
+  .col-md-8 img {
      display: block;
      margin: 10px auto;
      border: 3px solid black;
  }
 
- .container .img_text {
+ .col-md-8 .img_text {
      text-align: center;
      display: block;
      margin-top: -8px; // Reverse img-margin
