--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
 	    Registrerirngen tar 10 sekunder, og vi understreker igjen at det er vikitg at du gjør dette! Gjør dette nå, og så kan du lese resten av informasjonen senere.
 	    <br />
 	    <br />
-	    Mer informasjon om fadderopplegget finnes <a href="fadderbarn">her.</a>
+	    Mer informasjon om fadderopplegget finnes <a href="nystudent">her.</a>
 	  </p>
 	  <span class="GDPRinfo">Grunnet nye personvernsregler i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla. Derfor må du som ny student oppgi kontaktopplysninger selv.</span>
 	</div>
