--- a/templates/base.html
+++ b/templates/base.html
@@ -63,10 +63,10 @@
 	  <h2>Ny student?</h2>
 	  <div class="close_button" onclick="this.parentNode.classList.add('hidden');">Lukk meg</div>
 	  <p>
-	    Nabla er linjeforeningen for alle studenter ved sivilingeniørprogrammet i fysikk og mattematikk. Vi har et heidundranes fadderopplegg som vi håper du vil ta del i! Det er derfor veldig viktig at du trykker på knappen under og registrer deg!
+	    Nabla er linjeforeningen for alle studenter ved sivilingeniørprogrammet i fysikk og mattematikk. Vi har et heidundranes fadderopplegg som vi håper du vil ta del i! Det er derfor veldig viktig at du trykker på knappen under og registrerer deg!
 	    <br />
 	    <a href="https://goo.gl/forms/nrCuHhFy944SQrTL2" target="_blank" class="btn btn-primary center-block btn-lg">Trykk her for påmelding til fadderperioden - <u>viktig!</u></a>
-	    Registrerirngen tar 10 sekunder, og vi understreker igjen at det er vikitg at du gjør dette! Gjør dette nå, og så kan du lese resten av informasjonen senere.
+	    Registreringen tar 10 sekunder, og vi understreker igjen at det er viktig at du gjør dette! Gjør dette nå, og så kan du lese resten av informasjonen senere.
 	    <br />
 	    <br />
 	    Mer informasjon om fadderopplegget finnes <a href="nystudent">her.</a>
