--- a/nablapps/poll/templates/poll/includes/poll_result.html
+++ b/nablapps/poll/templates/poll/includes/poll_result.html
@@ -12,4 +12,7 @@
             </div>
         </div>
     {% endfor %}
+    {% if poll.answer %}
+	<p>Svar: {{ poll.answer }}</p>
+    {% endif %}
 {% endwith %}
