--- a/nablapps/meeting_records/templates/meeting_records/meeting_record_list.html
+++ b/nablapps/meeting_records/templates/meeting_records/meeting_record_list.html
@@ -10,14 +10,11 @@
 <table style="table-layout:fixed;"class="table table-striped">
 {% for m in meeting_record_list %}
     <tr>
-        <td style="width:20%">
-            <a href="{{ m.get_absolute_url }}"> {{ m.pub_date|date:"d. F Y" }} </a>
-        </td>
-        <td style="width:40%;">
-            {{ m.title }}
+        <td style="width:60%">
+            <a href="{{ m.get_absolute_url }}"> {{ m.title }} </a>
         </td>
         <td style="width:10%; align:right;">
-            <a class="btn btn-sm" href="{{ m.file.url }}"><i class="icon-download-alt"></i></a>
+            <a class="btn btn-sm" href="{{ m.file.url }}"><i class="fa fa-download"></i></a>
         </td>
     </tr>
 {% empty %}
