--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -84,14 +84,16 @@
             <div class="row">
                 {% for album in album_list %}
                     <div class="col-md-3 {% if not forloop.first %} hidden-xs{% endif %}">
-                        {% if album.visibility != 'u' %}
-                            <a class="thumbnail" href="{{ album.get_absolute_url }}">
-                                <img src="{% thumbnail album.first.file 730x200 quality=95 %}"/>
-                            </a>
-                        {% endif %}
-                        <div class="caption">
-                     <h3>{{ album.title }}</h3>
-                        </div>
+                        <a href="{{ album.get_absolute_url }}">
+                            {% if album.visibility != 'u' %}
+                                <div class="thumbnail">
+                                    <img src="{% thumbnail album.first.file 730x200 quality=95 %}"/>
+                                </div>
+                            {% endif %}
+                            <div class="caption">
+                                <h3>{{ album.title }}</h3>
+                            </div>
+                        </a>
                     </div>
                 {% endfor %}
             </div>
@@ -102,16 +104,17 @@
                 {% for blog in new_blog %}
                     
                     <div class="col-md-3 {% if not forloop.first %} hidden-xs{% endif %}">
+                        <a href="{{ blog.get_absolute_url }}">
+                            {% if blog.list_image %}
+                            <div class="thumbnail">
+                                <img src="{% thumbnail blog.list_image 730x200 quality=95 %}"/>
+                            </div>
+                            {% endif %}
 
-                        {% if blog.list_image %}
-							<a class="thumbnail" href="{{ blog.get_absolute_url }}">
-                         	<img src="{% thumbnail blog.list_image 730x200 quality=95 %}"/>
-                    		</a>
-                        {% endif %}
-
-                        <div class="caption">
-                            <h3>{{ blog.title }}</h3>
-                        </div>
+                            <div class="caption">
+                                <h3>{{ blog.title }}</h3>
+                            </div>
+                        </a>
                     </div>
                 {% endfor %}
             </div>
