Legg til word-wrapping for album/nablad/blogg på forside

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -90,7 +90,7 @@
                                     <img src="{% thumbnail album.first.file 730x200 quality=95 %}"/>
                                 </div>
                             {% endif %}
-                            <div class="caption">
+                            <div class="caption" style="word-wrap: break-word; hyphens: auto;">
                                 <h3>{{ album.title }}</h3>
                             </div>
                         </a>
@@ -111,7 +111,7 @@
                             </div>
                             {% endif %}
 
-                            <div class="caption">
+                            <div class="caption" style="word-wrap: break-word; hyphens: auto;">
                                 <h3>{{ blog.title }}</h3>
                             </div>
                         </a>
