--- a/nablapps/events/static/events/upcoming_events.css
+++ b/nablapps/events/static/events/upcoming_events.css
@@ -2,16 +2,18 @@
 .upcoming {
     padding: 8px 0;
 }
-    .upcoming span {
-        opacity: 0.5;
-        -moz-opacity: 0.5;
-        -webkit-opacity: 0.5;
-    }
+.upcoming span {
+    opacity: 0.5;
+    -moz-opacity: 0.5;
+    -webkit-opacity: 0.5;
+}
 
-    .upcoming > ul > li > a {
-        padding: 3px 15px;
+.upcoming > ul > li > a {
+    padding: 3px 15px;
 
-    }
-    .upcoming time {
-        margin-right: 2px;
-    }
+}
+.c-event, .c-bedpres {
+    display: inline-block;
+    margin-right: 2px;
+    width: 40px;
+}
