--- a/templates/base.html
+++ b/templates/base.html
@@ -263,7 +263,8 @@
 	                <h2>Tilbakemelding</h2>
                         <p>Har du
                             funnet en feil, får du ikke logget på, eller er det noe som burde
-                            forbedres? Kontakt webkom:<br>
+			    forbedres? Fyll ut tilbakemeldingsskjema: <a href="/contact/">her</a>,  
+			    eller Kontakt webkom:<br>
                             <a class="email" href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>
                         </p>
 	            </div>
