--- a/nablapps/events/templates/events/includes/info.html
+++ b/nablapps/events/templates/events/includes/info.html
@@ -157,6 +157,12 @@
 <div class="center">
 <a class="btn btn-default btn-xs" href="{% url "ical_event" event.pk %}">
     <span class="glyphicon glyphicon-calendar"></span>
-    iCalendar
+    iCal
+</a>
+<a class="btn btn-default btn-xs" href="https://calendar.google.com/calendar/r/eventedit?text={{ event.headline }}&dates={{event.event_start|date:'Ymd\THis' }}/{{event.event_end|date:'Ymd\THis' }}&details=&location={{ event.location }}&sf=true&output=xml&pli=1">
+    <span class="fa fa-calendar"></span>
+    Google kalender
 </a>
 </div>
+
+
