Small change in the footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -263,7 +263,7 @@
 	                <h2>Tilbakemelding</h2>
                         <p>Har du
                             funnet en feil, får du ikke logget på, eller er det noe som burde
-			    forbedres? Fyll ut tilbakemeldingsskjema: <a href="/contact/">her</a>,  
+			    forbedres? Fyll ut <a href="/contact/">tilbakemeldingsskjemaet</a>,  
 			    eller Kontakt webkom:<br>
                             <a class="email" href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>
                         </p>
