Remove bower, use npm instead.
This commit removes the usage of bower to install frontend-packages,
and replaces it with npm.
This is because bower is deprecated.

This means that we now have to run
```
manage.py npminstall
```
instead of
```
manage.py bower_install
```.

And we don't need to install bower.

--- a/nablapps/interactive/templates/interactive/advent_base.html
+++ b/nablapps/interactive/templates/interactive/advent_base.html
@@ -47,7 +47,7 @@
     {% endaddtoblock %}
 
     {% addtoblock "js-head" %}
-        <script src="{% static "jquery/jquery.min.js" %}"></script>
+        <script src="{% static "jquery/dist/jquery.min.js" %}"></script>
         <script src="{% static "requirejs/require.js" %}"></script>
     {% endaddtoblock %}
 
