--- a/nablapps/interactive/templates/interactive/advent_base_2016.html
+++ b/nablapps/interactive/templates/interactive/advent_base_2016.html
@@ -47,7 +47,7 @@
     {% endaddtoblock %}
 
     {% addtoblock "js-head" %}
-        <script src="{% static "jquery/jquery.min.js" %}"></script>
+        <script src="{% static "jquery/dist/jquery.min.js" %}"></script>
         <script src="{% static "requirejs/require.js" %}"></script>
     {% endaddtoblock %}
 
