--- a/templates/base.html
+++ b/templates/base.html
@@ -296,7 +296,7 @@
 
 {# Obligatory jQuery #}
 {% addtoblock "js-head" %}
-<script src="{% static "jquery/jquery.min.js" %}"></script>
+<script src="{% static "jquery/dist/jquery.min.js" %}"></script>
 {% endaddtoblock %}
 
 {# Google Analytics #}
