--- a/templates/base.html
+++ b/templates/base.html
@@ -1,34 +1,32 @@
-{% load cache %}
-{% load flatpages %}
+{% comment %}
+Django template for the main design of nabla.no.
+This should be extended by all other templates which wants
+to look like the rest of the site.
+
+For readability the template includes the navbar and the footer from other templates
+{% endcomment %}
 {% load sekizai_tags %}
 {% load bootstrap3 %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="no">
-
     <head>
-
         <meta charset="utf-8">
         <title>
             Nabla - {% block title %}linjeforeningen for Fysikk og matematikk ved NTNU{% endblock title %}
         </title>
         <meta name="description"
               content="Hjemmesiden til linjeforeningen Nabla, for studentene på
-                    fysikk og matematikk-masterprogrammet på NTNU.">
+                       fysikk og matematikk-masterprogrammet på NTNU.">
         <meta name="author" content="Nabla">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- Bootstrap Core CSS -->
-        {% addtoblock "css" %}
         <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap.min.css" %}">
         <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap-theme.min.css" %}">
         <link rel="stylesheet" href="{% static "font-awesome/css/font-awesome.min.css" %}">
-        <link href="{% static "css/default.css" %}" rel="stylesheet">
-        {% endaddtoblock %}
-        <!-- css-block -->
+        <link rel="stylesheet" href="{% static "css/default.css" %}">
         {% render_block "css" %}
 
-        <!-- Fav and touch icons, for screen and mobile -->
         <link rel="shortcut icon" href="{% static "img/favicon.ico" %}">
         <link rel="apple-touch-icon" href="{% static "img/apple-touch-icon.png" %}">
         <link rel="apple-touch-icon" sizes="72x72" href="{% static "img/apple-touch-icon-72x72.png" %}">
@@ -45,247 +43,33 @@
         {% block more_head %}
         {% endblock %}
 
-
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-	<![endif]-->
-
+        <![endif]-->
     </head>
-
-    <body>    
-        <!-- Navigation -->
-        <header>
-            <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-	        <a class="logo pull-left" href="/">
-                    {% block header_logo %}
-                    <img src="{% static "img/nabla_logo_white.png" %}" alt="Nabla">
-                    {% endblock header_logo %}
-	        </a>
-
-                <div class="container">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        {% block navbar_container %}
-                        {# navigasjonslenker #}
-                        <ul class="nav navbar-nav">
-                            <li><a href="/">Hjem</a></li>
-                            <li><a href="{% url "event_list" %}">Arrangementer</a></li>
-                            <li><a href="{% url "jobs_list" %}">Karriere</a></li>
-                            <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                Wiki
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu" >
-
-                                <li><a href="{% url "wiki:root" %}">Internwiki</a></li>
-                                <li><a href="{% url "ex_list" %}">Utveksling</a></li>                          
-                            </ul>
-                            </li>
-
-                            <li class="dropdown">
-                                <a href="#ting" class="dropdown-toggle" data-toggle="dropdown">
-                                    Nablamedia
-                                    <span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu" >
-                                    {# Faste lenker om Nabla #}
-
-                                    <li><a href="{% url "nablad_list" %}">Nabladet</a></li>
-                                    <li><a href="{% url "season_view" %}">Skråttcast</a></li>
-                                    <li><a href="{% url "meeting_record_list" %}">Styremøtereferater</a></li>
-                                    <li><a href="{% url "albums" %}">Bilder</a></li>
-                                    <li><a href="{% url "blog" %}">Blogg</a></li>
-                                    <li><a href="{% url "advent_calendar" "2017" %}">Julekalender 2017</a></li>
-                                </ul>
-                            </li>
-                            
-                            <li class="dropdown">
-                                <a href="#om" class="dropdown-toggle" data-toggle="dropdown">
-                                    Om Nabla
-                                    <span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu" >
-                                    <li>
-                                        <a href="{% url "committee_overview" %}" >
-                                            Komitéer
-                                        </a>
-                                    </li>
-                                    <li><a href="{% url 'show_com_page' slug="styret"%}">Styret</a></li>
-                                    {# url for /nablashop/ #}
-                                    <li><a href="{% url 'nablashop:index' %}" >Nablashop</a></li>
-
-                                    {# Hent alle sider som starter på /om/ #}
-                                    {% get_flatpages '/om/' as about_pages %}
-                                    {% for page in about_pages %}
-                                    <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                                    {% endfor %}
-                                </ul>
-                            </li>
-                        </ul>
-                        {# end navigasjonslenker #}
-                        <form class="form-inline" id="searchtop" method="get" action="{% url "haystack_search" %}">
-                            <div class="input-group">
-                                <input name="q" placeholder="Søk..." type="text" class="form-control">
-                                <span class="input-group-btn">
-                                    <button type="submit" class="btn btn-default">
-                                        <span class="glyphicon glyphicon-search"></span>
-                                    </button>
-                                </span>
-                            </div>
-                        </form>
-                        <ul class="nav navbar-nav navbar-right">
-                            {% if user.is_authenticated %}
-                            {# bruker-dropdown #}
-                            <li class="dropdown">
-                                <a href="#bruker" class="dropdown-toggle" data-toggle="dropdown">
-                                    <span class="glyphicon glyphicon-user"></span>
-                                    {% firstof user.get_full_name user.username %}
-                                    <span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="{% url "member_profile" user.username %}">Vis profil</a></li>
-                                    <li><a href="{% url "edit_profile" %}">Endre profil</a></li>
-                                    <li><a href="{% url "password_change" %}">Endre passord</a></li>
-                                    <li><a href="{% url "view_user_events" %}">Påmeldte arrangementer</a></li>
-                                    <li><a href="{% url "auth_logout" %}">Logg ut</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="{% url "user_polls" %}">Brukeravstemninger</a></li>
-                                    <li><a href="{% url "users_birthday" %}">Bursdag</a></li>
-                                    <li><a href="{% url "quiz_list" %}">Quiz</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="{% url "user_list" %}">Medlemsliste</a></li>
-                                    {% if user.is_staff %}
-                                    <li><a href="{% url "admin:index" %}">Admin</a></li>
-                                    <li><a href="/admin/filebrowser/browse">Filer</a></li>
-                                    {% endif %}
-                                    {% include "wiki/plugins/notifications/menubaritem.html" %}
-                                </ul>
-                            </li>
-                            {# end bruker-dropdown #}
-                            {% else %}
-                            <li><a href="{% url "user_registration" %}">Registrer deg</a></li>
-                            <li class="dropdown">
-                                <a href="{% url "auth_login" %}?next={{ request.path }}" class="dropdown-toggle" data-toggle="dropdown">
-                                    Logg inn
-                                    <span class="caret"></span>
-                                </a>
-                                <form class="dropdown-menu" action="{% url "auth_login" %}" method="post">
-                                    {% csrf_token %}
-                                    <input type='hidden' name='next' value='{{ request.path }}' />
-                                    <input class="form-control" type="text" placeholder="Brukernavn" name="username" />
-                                    <input class="form-control" type="password"  placeholder="Passord" name="password" />
-                                    <button class="submit btn btn-primary btn-block" type="submit">Logg inn</button>
-                                </form>
-                            </li>
-	                    {% endif %}
-	                    {% block flag %}
-                            <li><a class="logo" href="/english/">
-                                <img src="{% static "img/GB_flag.png" %}" alt="Eng">
-                            </a></li>
-	                    {% endblock %}
-                        </ul>
-                        {% endblock navbar_container %}
-                    </div>
-                    <!-- /.navbar-collapse -->
-                </div>
-                <!-- /.container -->
-            </nav>
-        </header>
-
-        <!-- Page Content -->
+    <body>
+        {% include "base_navbar_inc.html" %}
         <div class="container">
-
             {% bootstrap_messages %}
             {% block main %}
             <div class="row">
-	        <!-- Blog Entries Column -->
-	        <div class="col-md-8">
-	            {% block content %}{% endblock content %}
-	        </div>
-
-	        <!-- Blog Sidebar Widgets Column -->
-	        <div class="col-md-4">
+                <div class="col-md-8">
+                    {% block content %}
+                    {% endblock content %}
+                </div>
+                <div class="col-md-4">
                     {% block sidebar %}
                     {% endblock sidebar %}
-	        </div>
-
+                </div>
             </div>
-            <!-- /.row -->
             {% endblock main %}
         </div>
-
-        <!-- Footer -->
-        <footer>
-
-            <div class="container">
-	        <div class="row">
-
-                    {# kontakt #}
-                    <div class="col-md-4 kontakt">
-                        <h2>Kontakt</h2>
-
-                        <p>Du kan nå oss på <a class="email" href="mailto:nabla@nabla.ntnu.no">nabla@nabla.ntnu.no</a></p>
-
-                        <p>Bedrift? Kontakt Bedriftskontakten Nabla på <a class="email" href="mailto:bedkom@nabla.ntnu.no">bedkom@nabla.ntnu.no</a></p>
-
-                        <address>
-                            Nabla <br>
-                            Kjemiblokk 2 <br>
-                            Sem Sælands vei 10, NTNU <br>
-                            7034 Trondheim <br>
-                            Norway
-                        </address>
-                    </div>
-                    {# end kontakt #}
-
-                    {# om nabla #}
-                    <div class="col-md-4">
-	                <h2>Informasjon</h2>
-	                <p>
-	                    Organisasjonsnr.: <span class="pull-right">992168544</span><br /><br />
-	                    Hovedkonto: <span class="pull-right">15031357338</span><br />
-	                    Arrkomkonto: <span class="pull-right">15031357400</span><br />
-	                    Gravitoneskonto: <span class="pull-right">15036597965</span><br />
-	                </p>
-	                <h2>Tilbakemelding</h2>
-                        <p>Har du
-                            funnet en feil, får du ikke logget på, eller er det noe som burde
-                            forbedres? Kontakt webkom:<br>
-                            <a class="email" href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>
-                        </p>
-	            </div>
-                    {# end om nabla #}
-
-                    {# nablalogo #}
-                    <div class="col-md-4 center" id="nablafooter">
-                        <br><br>
-                        <img src="{% static "img/nabla-white.svg" %}" alt="nabla logo">
-                    </div>
-
-	        </div>
-            </div>
-        </footer>
-
-
-        <!-- /.container -->
-
+        {% include "base_footer_inc.html" %}
         {% render_block "js" %}
-
     </body>
-
 </html>
 
 {% addtoblock "js-head" %}
