Adds spambot check

--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -6,9 +6,21 @@
 
 <h1>Tilbakemelding</h1>
 
+{% if spam_check == True %}
+    <p> Forsøk å regne kontrollspørsmål på nytt </p>
+{% endif %}
+
 <form method="POST">
     {% csrf_token %}
-    {{ contact_form.as_p }}
+    {% for field in contact_form %}
+        {% if forloop.counter <= 4 %}
+            <p>{{field.label}} {{field}}</p>
+        {% endif %}
+    {% endfor %}
+    
+    <p>Hva er kvadratroten av {{ test_val }} ganget med {{ test_val }}?</p>
+    <p>{{ contact_form.spam_check }}</p>
+
     <button type="submit">Send</button>
 </form>
 
