Fixes small typo in footer (Kontakt -> kontakt)

--- a/templates/base.html
+++ b/templates/base.html
@@ -264,7 +264,7 @@
                         <p>Har du
                             funnet en feil, får du ikke logget på, eller er det noe som burde
 			    forbedres? Fyll ut <a href="/contact/">tilbakemeldingsskjemaet</a>,  
-			    eller Kontakt webkom:<br>
+			    eller kontakt webkom:<br>
                             <a class="email" href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>
                         </p>
 	            </div>
