Fixes typo in contact.html

--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -18,7 +18,7 @@
         {% endif %}
     {% endfor %}
     
-    <p>Hva er kvadratroten av {{ test_val }} ganget med {{ test_val }}?</p>
+    <p>Hva er kvadratroten av {{ test_val }} ganget med kvadratroten av {{ test_val }}?</p>
     <p>{{ contact_form.spam_check }}</p>
 
     <button type="submit">Send</button>
