Changes how forms are displayed, adds colon to all labels in forms.py

--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -14,7 +14,7 @@
     {% csrf_token %}
     {% for field in contact_form %}
         {% if forloop.counter <= 4 %}
-            <p>{{field.label}} {{field}}</p>
+            <p style="width: 100px;" >{{field.label}} {{field}}</p>
         {% endif %}
     {% endfor %}
     
