--- a/nablapps/events/templates/events/includes/info.html
+++ b/nablapps/events/templates/events/includes/info.html
@@ -159,7 +159,7 @@
     <span class="glyphicon glyphicon-calendar"></span>
     iCal
 </a>
-<a class="btn btn-default btn-xs" href="https://calendar.google.com/calendar/r/eventedit?text={{ event.headline }}&dates={{event.event_start|date:'Ymd\THis' }}/{{event.event_end|date:'Ymd\THis' }}&details=&location={{ event.location }}&sf=true&output=xml&pli=1">
+<a class="btn btn-default btn-xs" href="https://calendar.google.com/calendar/r/eventedit?text={{ event.headline }}&dates={{event.event_start|date:'Ymd\THis' }}/{{event.event_end|date:'Ymd\THis' }}&details=&location={{ event.location }}&sf=true&output=xml&pli=1" target ="_blank">
     <span class="fa fa-calendar"></span>
     Google kalender
 </a>
