Changes spam check error message, fixes a small bug in views.py

--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -7,7 +7,7 @@
 <h1>Tilbakemelding</h1>
 
 {% if spam_check == True %}
-    <p> Forsøk å regne kontrollspørsmål på nytt </p>
+    <p style="color:red;"> Forsøk å regne kontrollspørsmål på nytt <br> evt. sjekk at du ikke har flere åpne faner med tilbakemeldingsskjema og last inn på nytt</p>
 {% endif %}
 
 <form method="POST">
