--- a/templates/base_footer_inc.html
+++ b/templates/base_footer_inc.html
@@ -1,7 +1,7 @@
 {% comment %}
 The footer of nabla.no.
 It is meant to be included in base.html
-{% endcomment %}}
+{% endcomment %}
 {% load static %}
 <footer>
     <div class="container">
