Fix small inconsistencies in MathJax help

--- a/templates/comments/form.html
+++ b/templates/comments/form.html
@@ -69,7 +69,7 @@
 Og litt `kode`.
             </pre></div>
             <div class="col-md-5">
-                <p>Heisann, <a href="http://google.com">Lenketekst.com</a>, <strong>bold</strong>, <em>kursiv</em>. Og litt <code>kode</code>.</p>
+                <p>Heisann, <a href="http://google.com">Lenketekst</a>, <strong>bold</strong>, <em>kursiv</em>. Og litt <code>kode</code>.</p>
             </div>
         </div>
 
@@ -77,14 +77,14 @@ Og litt `kode`.
             <div class="col-md-7"><pre class="tex2jax_ignore">Jeg kan skrive store ligninger:
 
 `$$ \int_0^\infty \frac1{x^2}\, dx = y. $$`
-Og små ligninger `$ \int\,som\ dette$`.
+Og små ligninger `$ \int x^5\, dx$`, som dette.
             </pre></div>
             <div class="col-md-5">
                 <p>Jeg kan skrive store ligninger:</p>
 
                 <p><code>$$ \int_0^\infty \frac1{x^2}\, dx = y. $$</code></p>
 
-                <p>Og små ligninger <code>$ \int x^5\, dx$</code>.</p>
+                <p>Og små ligninger <code>$ \int x^5\, dx$</code>, som dette.</p>
             </div>
         </div>
 
